--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta charset="utf-8" />
+
+    <meta property="og:title" content="esarnb" />
+    <meta property="og:description" content="Waddle Waddle" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://esarnb.com" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:image" content="banner.gif" />
+    
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <meta name="theme-color" content="#00ffff" />
+    
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
   <body>
     <div id="root"></div>
